--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="photo/logo.jpg" alt="Logo" class="logo" />
+    <img src="images/logo.jpg" alt="Logo" class="logo" />
     <h1>Ro.nail_studio</h1>
     <p class="subtitle">♡ 台中南區美甲 ♡ 新手美甲師</p>
   </header>
@@ -21,9 +21,9 @@
   <section class="gallery">
     <h2>作品展示</h2>
     <div class="images">
-      <img src="photo/nail1.jpg" alt="作品1" />
-      <img src="photo/nail2.jpg" alt="作品2" />
-      <img src="photo/nail3.jpg" alt="作品3" />
+      <img src="images/nail1.jpg" alt="作品1" />
+      <img src="images/nail2.jpg" alt="作品2" />
+      <img src="images/nail3.jpg" alt="作品3" />
     </div>
   </section>
 
