--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
     <h2>預約與社群</h2>
     <a href="https://line.me/R/ti/p/@320npnak" target="_blank">📲 預約諮詢（LINE）</a>
     <a href="https://www.instagram.com/ro.nail_studio/" target="_blank">💖 Instagram</a>
+    <a href="https://www.facebook.com/ro.nailnail?locale=zh_TW" target="_blank">📘 Facebook</a>
     <a href="#" target="_blank">📕 小紅書</a>
   </section>
+  
 
   <footer>
     <p>© 2025 Ro.nail_studio｜made with love ♡</p>
