--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ro.nail_studio</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
   <header class="fade-in">
-    <img src="images/logo.jpg" alt="Logo" class="logo" />
+    <img src="images/logo.png" alt="Logo" class="logo" />
     <h1>♡ Ro.nail_studio ♡</h1>
     <p class="subtitle">♡ 台中南區美甲 ♡ 新手美甲師</p>
   </header>
